Add Chai integration for Puppeteer

--- a/packages/alfa-puppeteer/tsconfig.json
+++ b/packages/alfa-puppeteer/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "extends": "../tsconfig.json",
   "files": [
+    "chai.ts",
     "src/from-puppeteer-handle.ts",
     "src/index.ts",
     "src/is-puppeteer-handle.ts"
   ],
   "references": [
+    {
+      "path": "../alfa-chai"
+    },
     {
       "path": "../alfa-dom"
     },
