--- a/packages/alfa-puppeteer/package.json
+++ b/packages/alfa-puppeteer/package.json
@@ -26,10 +26,13 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
+    "*.js",
+    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-chai": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
     "@types/puppeteer": "^1.20.1",
