--- a/packages/alfa-webdriver/package.json
+++ b/packages/alfa-webdriver/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-puppeteer",
+  "name": "@siteimprove/alfa-webdriver",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -26,8 +26,6 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
@@ -35,11 +33,10 @@
     "@siteimprove/alfa-chai": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
-    "@types/puppeteer": "^1.20.1",
-    "puppeteer": "^1.20.0",
     "rollup": "^1.23.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-terser": "^5.1.2"
+    "rollup-plugin-terser": "^5.1.2",
+    "webdriverio": "^5.14.3"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
