--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -12,7 +12,6 @@
     "src/helpers/is-perceivable.ts",
     "src/helpers/is-required-attribute.ts",
     "src/helpers/is-supported-attribute.ts",
-    "src/helpers/predicate-builder.ts",
     "src/helpers/predicates.ts",
     "src/index.ts",
     "src/rules.ts",
@@ -74,7 +73,7 @@
     "test/helpers/has-language-attribute.spec.tsx",
     "test/helpers/is-document-element.spec.tsx",
     "test/helpers/outcome.ts",
-    "test/helpers/predicate-builder.spec.tsx",
+    "test/helpers/predicates.spec.tsx",
     "test/sia-r1/rule.spec.tsx",
     "test/sia-r10/rule.spec.tsx",
     "test/sia-r11/rule.spec.tsx",
