Implement `Predicate` utilities (#142)

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -12,6 +12,7 @@
     "src/helpers/is-perceivable.ts",
     "src/helpers/is-required-attribute.ts",
     "src/helpers/is-supported-attribute.ts",
+    "src/helpers/predicates.ts",
     "src/index.ts",
     "src/rules.ts",
     "src/sia-r1/locales/en.ts",
@@ -72,6 +73,7 @@
     "test/helpers/has-language-attribute.spec.tsx",
     "test/helpers/is-document-element.spec.tsx",
     "test/helpers/outcome.ts",
+    "test/helpers/predicates.spec.tsx",
     "test/sia-r1/rule.spec.tsx",
     "test/sia-r10/rule.spec.tsx",
     "test/sia-r11/rule.spec.tsx",
