--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -25,6 +25,7 @@
     "prepare": "node scripts/features.js && node scripts/browsers.js"
   },
   "dependencies": {
+    "@siteimprove/alfa-branched": "^0.0.0",
     "@siteimprove/alfa-collection": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
     "@types/browserslist": "^4.4.0",
