--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -32,6 +32,7 @@
     { "path": "alfa-pointer" },
     { "path": "alfa-puppeteer" },
     { "path": "alfa-react" },
+    { "path": "alfa-result" },
     { "path": "alfa-rules" },
     { "path": "alfa-scrape" },
     { "path": "alfa-test" },
