Add missing file reference

--- a/packages/alfa-util/tsconfig.json
+++ b/packages/alfa-util/tsconfig.json
@@ -20,6 +20,7 @@
     "src/string/trim-right.ts",
     "src/string/trim.ts",
     "src/type/immutable.ts",
+    "src/type/keys.ts",
     "src/type/mutable.ts",
     "src/type/predicate.ts",
     "src/type/primitive.ts",
