--- a/packages/alfa-angular/package.json
+++ b/packages/alfa-angular/package.json
@@ -17,7 +17,7 @@
     "Búgvi Benjamin Magnussen <bbm@siteimprove.com>",
     "Jean-Yves Moyen <jym@siteimprove.com>",
     "Kasper Kronborg Isager <kki@siteimprove.com>",
-    "Niclas Hedam <nhe@siteimprove.com>",
+    "Niclas Hedam <niclas@hed.am>",
     "Per Jakobsen <pja@siteimprove.com>",
     "Tobias Christian Jensen <tcj@siteimprove.com>"
   ],
