--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -27,6 +27,7 @@
     { "path": "alfa-jquery" },
     { "path": "alfa-json-ld" },
     { "path": "alfa-lang" },
+    { "path": "alfa-mapper" },
     { "path": "alfa-math" },
     { "path": "alfa-pointer" },
     { "path": "alfa-puppeteer" },
