--- a/packages/alfa-branched/package.json
+++ b/packages/alfa-branched/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-collection": "^0.0.0",
+    "@siteimprove/alfa-compare": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
