--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -12,6 +12,7 @@
     { "path": "alfa-cheerio" },
     { "path": "alfa-cli" },
     { "path": "alfa-collection" },
+    { "path": "alfa-compare" },
     { "path": "alfa-compatibility" },
     { "path": "alfa-crypto" },
     { "path": "alfa-css" },
