Add additional `Generator` and `Iterable` functions

--- a/packages/alfa-generator/package.json
+++ b/packages/alfa-generator/package.json
@@ -21,6 +21,10 @@
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
+  "dependencies": {
+    "@siteimprove/alfa-mapper": "^0.0.0",
+    "@siteimprove/alfa-reducer": "^0.0.0"
+  },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
   }
