--- a/packages/alfa-generator/tsconfig.json
+++ b/packages/alfa-generator/tsconfig.json
@@ -3,6 +3,12 @@
   "files": ["src/generator.ts", "src/index.ts", "test/generator.spec.ts"],
   "references": [
     {
+      "path": "../alfa-mapper"
+    },
+    {
+      "path": "../alfa-reducer"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
