--- a/packages/alfa-iterable/package.json
+++ b/packages/alfa-iterable/package.json
@@ -21,6 +21,13 @@
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
+  "dependencies": {
+    "@siteimprove/alfa-compare": "^0.0.0",
+    "@siteimprove/alfa-mapper": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-reducer": "^0.0.0"
+  },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
   }
