--- a/packages/alfa-branched/package.json
+++ b/packages/alfa-branched/package.json
@@ -22,9 +22,10 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-collection": "^0.0.0",
-    "@siteimprove/alfa-compare": "^0.0.0",
+    "@siteimprove/alfa-equality": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
