--- a/packages/alfa-result/tsconfig.json
+++ b/packages/alfa-result/tsconfig.json
@@ -9,7 +9,7 @@
   ],
   "references": [
     {
-      "path": "../alfa-compare"
+      "path": "../alfa-equality"
     },
     {
       "path": "../alfa-functor"
