--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -12,7 +12,6 @@
     { "path": "alfa-cheerio" },
     { "path": "alfa-cli" },
     { "path": "alfa-collection" },
-    { "path": "alfa-compare" },
     { "path": "alfa-compatibility" },
     { "path": "alfa-crypto" },
     { "path": "alfa-css" },
@@ -20,6 +19,7 @@
     { "path": "alfa-device" },
     { "path": "alfa-dom" },
     { "path": "alfa-enzyme" },
+    { "path": "alfa-equality" },
     { "path": "alfa-functor" },
     { "path": "alfa-generator" },
     { "path": "alfa-highlight" },
@@ -32,6 +32,7 @@
     { "path": "alfa-jquery" },
     { "path": "alfa-json-ld" },
     { "path": "alfa-lang" },
+    { "path": "alfa-list" },
     { "path": "alfa-mapper" },
     { "path": "alfa-math" },
     { "path": "alfa-monad" },
