--- a/packages/alfa-branched/package.json
+++ b/packages/alfa-branched/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equality": "^0.0.0",
+    "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
