--- a/packages/alfa-foldable/package.json
+++ b/packages/alfa-foldable/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-list",
+  "name": "@siteimprove/alfa-foldable",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -22,14 +22,6 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-equality": "^0.0.0",
-    "@siteimprove/alfa-foldable": "^0.0.0",
-    "@siteimprove/alfa-functor": "^0.0.0",
-    "@siteimprove/alfa-iterable": "^0.0.0",
-    "@siteimprove/alfa-mapper": "^0.0.0",
-    "@siteimprove/alfa-monad": "^0.0.0",
-    "@siteimprove/alfa-option": "^0.0.0",
-    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-reducer": "^0.0.0"
   },
   "devDependencies": {
