--- a/packages/alfa-list/tsconfig.json
+++ b/packages/alfa-list/tsconfig.json
@@ -6,6 +6,9 @@
       "path": "../alfa-equality"
     },
     {
+      "path": "../alfa-foldable"
+    },
+    {
       "path": "../alfa-functor"
     },
     {
