--- a/packages/alfa-result/package.json
+++ b/packages/alfa-result/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equality": "^0.0.0",
+    "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
