Implement improved `Cache` type

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -8,6 +8,7 @@
     { "path": "alfa-aria" },
     { "path": "alfa-assert" },
     { "path": "alfa-branched" },
+    { "path": "alfa-cache" },
     { "path": "alfa-chai" },
     { "path": "alfa-cheerio" },
     { "path": "alfa-cli" },
