--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -115,6 +115,9 @@
       "path": "../alfa-lang"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-test"
     },
     {
