--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -22,10 +22,14 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-branched": "^0.0.0",
     "@siteimprove/alfa-collection": "^0.0.0",
     "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-unicode": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
