--- a/packages/alfa-css/package.json
+++ b/packages/alfa-css/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
