--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -24,10 +24,13 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-cache": "^0.0.0",
     "@siteimprove/alfa-crypto": "^0.0.0",
     "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
