Various fixes to `Iterable`, `List`, `Option`, and `Predicate` types

--- a/packages/alfa-option/tsconfig.json
+++ b/packages/alfa-option/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../alfa-monad"
     },
     {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-reducer"
     },
     {
