--- a/packages/alfa-option/package.json
+++ b/packages/alfa-option/package.json
@@ -27,6 +27,7 @@
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-reducer": "^0.0.0",
     "@siteimprove/alfa-thunk": "^0.0.0"
   },
