--- a/packages/alfa-json-ld/package.json
+++ b/packages/alfa-json-ld/package.json
@@ -22,7 +22,8 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-util": "^0.0.0"
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-result": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
