--- a/packages/alfa-json-ld/tsconfig.json
+++ b/packages/alfa-json-ld/tsconfig.json
@@ -2,23 +2,21 @@
   "extends": "../tsconfig.json",
   "files": [
     "src/expand.ts",
-    "src/get-mapping.ts",
     "src/guards.ts",
     "src/index.ts",
-    "src/is-absolute-iri.ts",
-    "src/is-relative-iri.ts",
-    "src/process-context.ts",
-    "src/resolve-url.ts",
     "src/types.ts",
     "test/expand.spec.ts",
     "test/helpers/person.ts"
   ],
   "references": [
     {
-      "path": "../alfa-test"
+      "path": "../alfa-option"
     },
     {
-      "path": "../alfa-util"
+      "path": "../alfa-result"
+    },
+    {
+      "path": "../alfa-test"
     }
   ]
 }
