Rework some dependencies

--- a/packages/alfa-compatibility/tsconfig.json
+++ b/packages/alfa-compatibility/tsconfig.json
@@ -12,13 +12,10 @@
       "path": "../alfa-branched"
     },
     {
-      "path": "../alfa-collection"
+      "path": "../alfa-iterable"
     },
     {
       "path": "../alfa-test"
-    },
-    {
-      "path": "../alfa-util"
     }
   ]
 }
