--- a/packages/alfa-assert/package.json
+++ b/packages/alfa-assert/package.json
@@ -26,6 +26,7 @@
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-highlight": "^0.0.0",
-    "@siteimprove/alfa-rules": "^0.0.0"
+    "@siteimprove/alfa-rules": "^0.0.0",
+    "@siteimprove/alfa-web": "^0.0.0"
   }
 }
