Tweak rule structure

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -3,6 +3,7 @@
   "files": [
     "src/audit.ts",
     "src/cache.ts",
+    "src/interview.ts",
     "src/index.ts",
     "src/oracle.ts",
     "src/outcome.ts",
@@ -33,6 +34,9 @@
     },
     {
       "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-record"
     },
     {
       "path": "../alfa-test"
