--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -25,13 +25,16 @@
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-affine": "^0.0.0",
     "@siteimprove/alfa-aria": "^0.0.0",
+    "@siteimprove/alfa-branched": "^0.0.0",
     "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
-    "@siteimprove/alfa-unicode": "^0.0.0"
+    "@siteimprove/alfa-unicode": "^0.0.0",
+    "@siteimprove/alfa-web": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
