Various `Branched` and `Option` refactors

--- a/packages/alfa-branched/tsconfig.json
+++ b/packages/alfa-branched/tsconfig.json
@@ -3,6 +3,9 @@
   "files": ["src/branched.ts", "src/index.ts", "test/branched.spec.ts"],
   "references": [
     {
+      "path": "../alfa-applicative"
+    },
+    {
       "path": "../alfa-equality"
     },
     {
