--- a/packages/alfa-predicate/tsconfig.json
+++ b/packages/alfa-predicate/tsconfig.json
@@ -3,6 +3,9 @@
   "files": ["src/index.ts", "src/predicate.ts", "test/predicate.spec.ts"],
   "references": [
     {
+      "path": "../alfa-equality"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
