--- a/packages/alfa-list/package.json
+++ b/packages/alfa-list/package.json
@@ -22,6 +22,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-bits": "^0.0.0",
     "@siteimprove/alfa-equality": "^0.0.0",
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
