Add missing project references

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -5,6 +5,7 @@
     { "path": "alfa-act" },
     { "path": "alfa-affine" },
     { "path": "alfa-angular" },
+    { "path": "alfa-applicative" },
     { "path": "alfa-aria" },
     { "path": "alfa-assert" },
     { "path": "alfa-branched" },
@@ -20,9 +21,11 @@
     { "path": "alfa-dom" },
     { "path": "alfa-enzyme" },
     { "path": "alfa-equality" },
+    { "path": "alfa-fnv" },
     { "path": "alfa-foldable" },
     { "path": "alfa-functor" },
     { "path": "alfa-generator" },
+    { "path": "alfa-hash" },
     { "path": "alfa-highlight" },
     { "path": "alfa-html" },
     { "path": "alfa-http" },
@@ -34,6 +37,7 @@
     { "path": "alfa-json-ld" },
     { "path": "alfa-lang" },
     { "path": "alfa-list" },
+    { "path": "alfa-map" },
     { "path": "alfa-mapper" },
     { "path": "alfa-math" },
     { "path": "alfa-monad" },
@@ -42,10 +46,12 @@
     { "path": "alfa-predicate" },
     { "path": "alfa-puppeteer" },
     { "path": "alfa-react" },
+    { "path": "alfa-record" },
     { "path": "alfa-reducer" },
     { "path": "alfa-result" },
     { "path": "alfa-rules" },
     { "path": "alfa-scrape" },
+    { "path": "alfa-set" },
     { "path": "alfa-test" },
     { "path": "alfa-thunk" },
     { "path": "alfa-unexpected" },
