--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -59,6 +59,7 @@
     { "path": "alfa-unicode" },
     { "path": "alfa-util" },
     { "path": "alfa-vue" },
+    { "path": "alfa-web" },
     { "path": "alfa-webdriver" },
     { "path": "alfa-xpath" },
     { "path": "eslint-plugin-alfa" }
