Use `Result` type for rule expectations

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -36,6 +36,9 @@
       "path": "../alfa-record"
     },
     {
+      "path": "../alfa-result"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
