--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -29,7 +29,8 @@
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
-    "@siteimprove/alfa-record": "^0.0.0"
+    "@siteimprove/alfa-record": "^0.0.0",
+    "@siteimprove/alfa-result": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
