--- a/packages/alfa-assert/package.json
+++ b/packages/alfa-assert/package.json
@@ -23,10 +23,15 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
-    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-highlight": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-list": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-rules": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0"
+  },
+  "devDependencies": {
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
