Use `Result` type for rules

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -52,6 +52,9 @@
       "path": "../alfa-lang"
     },
     {
+      "path": "../alfa-result"
+    },
+    {
       "path": "../alfa-test"
     },
     {
