--- a/packages/alfa-http/tsconfig.json
+++ b/packages/alfa-http/tsconfig.json
@@ -3,6 +3,9 @@
   "files": ["src/index.ts", "src/types.ts"],
   "references": [
     {
+      "path": "../alfa-guards"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
