Use shared type guards where needed

--- a/packages/alfa-equality/tsconfig.json
+++ b/packages/alfa-equality/tsconfig.json
@@ -3,6 +3,9 @@
   "files": ["src/equality.ts", "src/index.ts"],
   "references": [
     {
+      "path": "../alfa-guards"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
