--- a/packages/alfa-cache/package.json
+++ b/packages/alfa-cache/package.json
@@ -22,6 +22,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-guards": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-thunk": "^0.0.0"
