--- a/packages/alfa-cache/tsconfig.json
+++ b/packages/alfa-cache/tsconfig.json
@@ -3,6 +3,9 @@
   "files": ["src/cache.ts", "src/index.ts", "test/cache.spec.ts"],
   "references": [
     {
+      "path": "../alfa-guards"
+    },
+    {
       "path": "../alfa-iterable"
     },
     {
