Remove ESLint integration for now

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -61,7 +61,6 @@
     { "path": "alfa-vue" },
     { "path": "alfa-web" },
     { "path": "alfa-webdriver" },
-    { "path": "alfa-xpath" },
-    { "path": "eslint-plugin-alfa" }
+    { "path": "alfa-xpath" }
   ]
 }
