Implement `toEARL()` for `Outcome` and `Rule`

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -21,6 +21,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-json-ld"
+    },
+    {
       "path": "../alfa-list"
     },
     {
