--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -25,6 +25,7 @@
     "@siteimprove/alfa-equality": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json-ld": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
