--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -29,8 +29,10 @@
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
+    "@siteimprove/alfa-json-ld": "^0.0.0",
     "@siteimprove/alfa-rules": "^0.0.0",
     "@siteimprove/alfa-scrape": "^0.0.0",
+    "@siteimprove/alfa-web": "^0.0.0",
     "@types/yargs": "^13.0.0",
     "enquirer": "^2.3.0",
     "yargs": "^14.0.0"
