--- a/packages/alfa-record/package.json
+++ b/packages/alfa-record/package.json
@@ -23,8 +23,11 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equality": "^0.0.0",
+    "@siteimprove/alfa-foldable": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
-    "@siteimprove/alfa-option": "^0.0.0"
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-reducer": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
