Progress on rules refactoring

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -2,20 +2,45 @@
   "extends": "../tsconfig.json",
   "files": [
     "src/common/predicate/has-accessible-name.ts",
-    "src/common/predicate/has-document-element.ts",
+    "src/common/predicate/has-attribute.ts",
+    "src/common/predicate/has-child.ts",
+    "src/common/predicate/has-descendant.ts",
+    "src/common/predicate/has-id.ts",
     "src/common/predicate/has-input-type.ts",
+    "src/common/predicate/has-name-from.ts",
     "src/common/predicate/has-name.ts",
     "src/common/predicate/has-namespace.ts",
+    "src/common/predicate/has-role-category.ts",
     "src/common/predicate/has-role.ts",
+    "src/common/predicate/has-tab-index.ts",
     "src/common/predicate/has-text-content.ts",
+    "src/common/predicate/has-unique-id.ts",
     "src/common/predicate/is-decorative.ts",
+    "src/common/predicate/is-defined.ts",
+    "src/common/predicate/is-document-element.ts",
+    "src/common/predicate/is-empty.ts",
     "src/common/predicate/is-exposed.ts",
+    "src/common/predicate/is-visible.ts",
+    "src/common/predicate/is-whitespace.ts",
+    "src/common/question.ts",
     "src/common/walk.ts",
     "src/index.ts",
     "src/rules.ts",
     "src/sia-r1/rule.ts",
+    "src/sia-r10/rule.ts",
+    "src/sia-r11/rule.ts",
+    "src/sia-r12/rule.ts",
+    "src/sia-r13/rule.ts",
+    "src/sia-r14/rule.ts",
+    "src/sia-r15/rule.ts",
     "src/sia-r2/rule.ts",
-    "test/sia-r1/rule.spec.tsx"
+    "src/sia-r3/rule.ts",
+    "src/sia-r4/rule.ts",
+    "src/sia-r5/rule.ts",
+    "src/sia-r6/rule.ts",
+    "src/sia-r7/rule.ts",
+    "src/sia-r8/rule.ts",
+    "src/sia-r9/rule.ts"
   ],
   "references": [
     {
