--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -31,7 +31,7 @@
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-json-ld": "^0.0.0",
     "@siteimprove/alfa-rules": "^0.0.0",
-    "@siteimprove/alfa-scrape": "^0.0.0",
+    "@siteimprove/alfa-scraper": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "@types/yargs": "^13.0.0",
     "enquirer": "^2.3.0",
