--- a/packages/alfa-cli/tsconfig.json
+++ b/packages/alfa-cli/tsconfig.json
@@ -27,7 +27,7 @@
       "path": "../alfa-rules"
     },
     {
-      "path": "../alfa-scrape"
+      "path": "../alfa-scraper"
     },
     {
       "path": "../alfa-test"
