Refactor IANA package

--- a/packages/alfa-iana/tsconfig.json
+++ b/packages/alfa-iana/tsconfig.json
@@ -12,6 +12,9 @@
       "path": "../alfa-lang"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
