--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -25,7 +25,8 @@
     "prepare": "node scripts/subtags.js"
   },
   "dependencies": {
-    "@siteimprove/alfa-lang": "^0.0.0"
+    "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0",
