--- a/packages/alfa-vue/tsconfig.json
+++ b/packages/alfa-vue/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-guards"
+    },
+    {
       "path": "../alfa-jasmine"
     },
     {
