--- a/packages/alfa-jquery/tsconfig.json
+++ b/packages/alfa-jquery/tsconfig.json
@@ -6,7 +6,13 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-guards"
+    },
+    {
       "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-web"
     }
   ]
 }
