--- a/packages/alfa-webdriver/tsconfig.json
+++ b/packages/alfa-webdriver/tsconfig.json
@@ -9,7 +9,13 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-guards"
+    },
+    {
       "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-web"
     }
   ]
 }
