Implement `Branched#some()` and `Branched#every()`

--- a/packages/alfa-branched/tsconfig.json
+++ b/packages/alfa-branched/tsconfig.json
@@ -30,6 +30,9 @@
       "path": "../alfa-option"
     },
     {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-reducer"
     },
     {
