--- a/packages/alfa-branched/package.json
+++ b/packages/alfa-branched/package.json
@@ -31,6 +31,7 @@
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-reducer": "^0.0.0"
   },
   "devDependencies": {
