Implement `List#groupBy()`

--- a/packages/alfa-list/tsconfig.json
+++ b/packages/alfa-list/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-map"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
