Allow `Oracle` to provide answers async

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-future"
+    },
+    {
       "path": "../alfa-iterable"
     },
     {
