--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@siteimprove/alfa-equality": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-future": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-json-ld": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
