--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -26,7 +26,17 @@
     "bin/**/*.js",
     "bin/**/*.d.ts"
   ],
+  "oclif": {
+    "commands": "./bin/alfa/commands",
+    "bin": "alfa",
+    "plugins": [
+      "@oclif/plugin-help"
+    ]
+  },
   "dependencies": {
+    "@oclif/command": "^1.5.19",
+    "@oclif/config": "^1.13.3",
+    "@oclif/plugin-help": "^2.2.1",
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-json-ld": "^0.0.0",
