--- a/packages/alfa-assert/package.json
+++ b/packages/alfa-assert/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-future": "^0.0.0",
     "@siteimprove/alfa-highlight": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
