Implement `Result#ok()` and `Result#err()`

--- a/packages/alfa-result/tsconfig.json
+++ b/packages/alfa-result/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../alfa-monad"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-reducer"
     },
     {
