--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -23,7 +23,9 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-branched": "^0.0.0",
+    "@siteimprove/alfa-cache": "^0.0.0",
     "@siteimprove/alfa-compatibility": "^0.0.0",
+    "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
