--- a/packages/alfa-assert/package.json
+++ b/packages/alfa-assert/package.json
@@ -30,7 +30,8 @@
     "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-rules": "^0.0.0",
-    "@siteimprove/alfa-web": "^0.0.0"
+    "@siteimprove/alfa-web": "^0.0.0",
+    "@siteimprove/alfa-xpath": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
