--- a/packages/alfa-css/package.json
+++ b/packages/alfa-css/package.json
@@ -31,6 +31,7 @@
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-parser": "^0.0.0",
     "@siteimprove/alfa-reducer": "^0.0.0",
+    "@siteimprove/alfa-slice": "^0.0.0",
     "@siteimprove/alfa-thunk": "^0.0.0"
   },
   "devDependencies": {
