--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -25,7 +25,10 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-iterable": "^0.0.0",
-    "@siteimprove/alfa-option": "^0.0.0"
+    "@siteimprove/alfa-mapper": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-set": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
