Add some missing package references

--- a/packages/alfa-future/tsconfig.json
+++ b/packages/alfa-future/tsconfig.json
@@ -6,6 +6,12 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-list"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
