--- a/packages/alfa-option/tsconfig.json
+++ b/packages/alfa-option/tsconfig.json
@@ -21,6 +21,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-hash"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
