--- a/packages/alfa-future/package.json
+++ b/packages/alfa-future/package.json
@@ -23,6 +23,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0"
