--- a/packages/alfa-option/package.json
+++ b/packages/alfa-option/package.json
@@ -26,6 +26,7 @@
     "@siteimprove/alfa-equality": "^0.0.0",
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-hash": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
