More consistently prefix private fields with `_`

--- a/packages/alfa-future/package.json
+++ b/packages/alfa-future/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
-    "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
-    "@siteimprove/alfa-option": "^0.0.0"
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-sequence": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
