--- a/packages/alfa-branched/package.json
+++ b/packages/alfa-branched/package.json
@@ -32,7 +32,8 @@
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
-    "@siteimprove/alfa-reducer": "^0.0.0"
+    "@siteimprove/alfa-reducer": "^0.0.0",
+    "@siteimprove/alfa-sequence": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
