--- a/packages/alfa-branched/tsconfig.json
+++ b/packages/alfa-branched/tsconfig.json
@@ -36,6 +36,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-sequence"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
