--- a/packages/alfa-future/tsconfig.json
+++ b/packages/alfa-future/tsconfig.json
@@ -9,9 +9,6 @@
       "path": "../alfa-iterable"
     },
     {
-      "path": "../alfa-list"
-    },
-    {
       "path": "../alfa-mapper"
     },
     {
@@ -19,6 +16,9 @@
     },
     {
       "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-sequence"
     },
     {
       "path": "../alfa-test"
