--- a/packages/alfa-future/package.json
+++ b/packages/alfa-future/package.json
@@ -22,12 +22,15 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-callback": "^0.0.0",
+    "@siteimprove/alfa-continuation": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
-    "@siteimprove/alfa-option": "^0.0.0",
-    "@siteimprove/alfa-sequence": "^0.0.0"
+    "@siteimprove/alfa-sequence": "^0.0.0",
+    "@siteimprove/alfa-thunk": "^0.0.0",
+    "@siteimprove/alfa-trampoline": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
