Use sequences for most `Node` methods

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -37,6 +37,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-lazy"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
@@ -44,6 +47,9 @@
     },
     {
       "path": "../alfa-predicate"
+    },
+    {
+      "path": "../alfa-sequence"
     },
     {
       "path": "../alfa-set"
