--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -25,9 +25,11 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-sequence": "^0.0.0",
     "@siteimprove/alfa-set": "^0.0.0"
   },
   "devDependencies": {
