Progress on CSS package refactoring

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -11,6 +11,7 @@
     "src/property.ts",
     "src/property/display.ts",
     "src/property/opacity.ts",
+    "src/property/transform.ts",
     "src/property/visibility.ts",
     "src/selector.ts",
     "src/style.ts",
@@ -18,8 +19,8 @@
     "src/syntax/token.ts",
     "src/value.ts",
     "src/value/angle.ts",
+    "src/value/convert.ts",
     "src/value/function.ts",
-    "src/value/integer.ts",
     "src/value/keyword.ts",
     "src/value/length.ts",
     "src/value/percentage.ts",
