Progress on rule refactors

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -21,9 +21,11 @@
     "src/common/predicate/has-value.ts",
     "src/common/predicate/is-decorative.ts",
     "src/common/predicate/is-defined.ts",
-    "src/common/predicate/is-inert.ts",
+    "src/common/predicate/is-disabled.ts",
     "src/common/predicate/is-document-element.ts",
+    "src/common/predicate/is-focusable.ts",
     "src/common/predicate/is-ignored.ts",
+    "src/common/predicate/is-inert.ts",
     "src/common/predicate/is-perceivable.ts",
     "src/common/predicate/is-rendered.ts",
     "src/common/predicate/is-tabbable.ts",
@@ -71,11 +73,15 @@
     "src/sia-r41/rule.ts",
     "src/sia-r42/rule.ts",
     "src/sia-r43/rule.ts",
+    "src/sia-r44/rule.ts",
+    "src/sia-r47/rule.ts",
     "src/sia-r48/rule.ts",
     "src/sia-r49/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r50/rule.ts",
     "src/sia-r6/rule.ts",
+    "src/sia-r63/rule.ts",
+    "src/sia-r67/rule.ts",
     "src/sia-r7/rule.ts",
     "src/sia-r8/rule.ts",
     "src/sia-r9/rule.ts"
