Base `Sequence` on `Lazy`

--- a/packages/alfa-branched/tsconfig.json
+++ b/packages/alfa-branched/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-lazy"
+    },
+    {
       "path": "../alfa-list"
     },
     {
