--- a/packages/alfa-future/tsconfig.json
+++ b/packages/alfa-future/tsconfig.json
@@ -15,6 +15,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-lazy"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
