--- a/packages/alfa-branched/package.json
+++ b/packages/alfa-branched/package.json
@@ -27,6 +27,7 @@
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
